Bug 258174 - Crash in ISOProtectionSystemSpecificHeaderBox::parse with large keyID counts
Summary: Crash in ISOProtectionSystemSpecificHeaderBox::parse with large keyID counts
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andy Estes
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-15 16:21 PDT by Andy Estes
Modified: 2023-06-16 14:01 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andy Estes 2023-06-15 16:21:55 PDT
SSIA
Comment 1 Andy Estes 2023-06-15 16:22:02 PDT
<rdar://problem/110412566>
Comment 2 Andy Estes 2023-06-15 16:26:15 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15027
Comment 3 EWS 2023-06-16 14:01:52 PDT
Committed 265256@main (3b3afcc8898e): <https://commits.webkit.org/265256@main>

Reviewed commits have been landed. Closing PR #15027 and removing active labels.