Crash in ISOProtectionSystemSpecificHeaderBox::parse with large keyID counts https://bugs.webkit.org/show_bug.cgi?id=258174 rdar://110412566

Reviewed by Jean-Yves Avenard.

KeyID is 16 bytes, so it's possible for a `pssh` box to specify a `keyIDCount` large enough that the
following keyIDs array cannot be contained by a Vector. To account for this, try to reserve capacity
for `keyIDCount` in m_keyIDs before resizing and return `false` if the reservation fails.

* Source/WebCore/platform/graphics/iso/ISOProtectionSystemSpecificHeaderBox.cpp:
(WebCore::ISOProtectionSystemSpecificHeaderBox::parse):

Canonical link: https://commits.webkit.org/265256@main